<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_recommendation"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp">

    <ImageView
        android:id="@+id/iv_recommendation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ixigo.invincible.takemethere.harsh.customview.TextViewCustom
        android:id="@+id/tv_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/budget_trip"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <ixigo.invincible.takemethere.harsh.customview.TextViewCustom
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:background="#66000000"
        android:text="@string/name"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <ixigo.invincible.takemethere.harsh.customview.TextViewCustom
            android:id="@+id/tv_places_to_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_recommendation"
            android:gravity="center"
            android:text="@string/places_to_visit"
            android:textSize="16sp"
            app:font="@string/font_roboto_regular" />

        <ixigo.invincible.takemethere.harsh.customview.TextViewCustom
            android:id="@+id/tv_hotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_recommendation"
            android:gravity="center"
            android:text="@string/hotels"
            android:textSize="16sp"
            app:font="@string/font_roboto_regular" />

        <ixigo.invincible.takemethere.harsh.customview.TextViewCustom
            android:id="@+id/tv_things_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_recommendation"
            android:gravity="center"
            android:text="@string/things_to_do"
            android:textSize="16sp"
            app:font="@string/font_roboto_regular" />
    </LinearLayout>
</android.support.v7.widget.CardView>